# lemon-rs

./: .gitignore  Cargo.toml  Makefile  README.md  Sync.md  build.rs  checks.md  simple.y
.github/workflows/: rust.yml
benches/: keyword.rs
dialect/: Cargo.toml
dialect/benches/: keyword.rs
dialect/src/: lib.rs  token.rs
examples/: simple.y  single.rs  sizes.rs  sql_check.rs  sql_cmd.rs  sql_cmds.rs  sql_tokens.rs
lexer/: Cargo.toml  README.md
lexer/examples/: sql_check.rs  sql_cmd.rs  sql_cmds.rs  sql_tokens.rs
lexer/src/: lib.rs  scan.rs
lexer/src/sql/: error.rs  mod.rs
parser/: Cargo.toml
parser/examples/: simple.y
parser/src/: lib.rs  parse.y  token.rs
parser/src/ast/: mod.rs
sqlparser_bench/: Cargo.toml
sqlparser_bench/benches/: sqlparser_bench.rs
src/: error.rs  lib.rs  parse.y  scan.rs  token.rs
src/ast/: mod.rs
src/dialect/: mod.rs  token.rs
src/lexer/: mod.rs  scan.rs
src/lexer/sql/: error.rs  mod.rs  test.rs
src/parser/: mod.rs  parse.y  stack.rs
src/parser/ast/: check.rs  fmt.rs  mod.rs  span.rs
tests/lexer/: streaming_iterator.rs
