[package]
name = "sqlite3-parser"
version = "0.2.0"
edition = "2021"
authors = ["gwenn"]
description = "SQL parser (as understood by SQLite)"
documentation = "http://docs.rs/sqlite3-parser"
repository = "https://github.com/gwenn/lemon-rs"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["sql", "parser", "scanner", "tokenizer"]
license = "Apache-2.0/MIT"
build = "build.rs" # Lemon preprocessing

[badges]
maintenance = { status = "experimental" }

[features]
# FIXME: specific to one parser, not global
YYTRACKMAXSTACKDEPTH = []
YYNOERRORRECOVERY = []
YYSTACKDYNAMIC = []
YYCOVERAGE = []
NDEBUG = []
default = ["YYNOERRORRECOVERY", "buf_redux"]

[dependencies]
phf = { version = "0.10", features = ["macros"] }
log = "0.4"
memchr = "2.0"
fallible-iterator = "0.2"
smallvec = ">=1.6.1"
buf_redux = { version = "0.8", optional = true }
bitflags = "1.3"

[dev-dependencies]
env_logger = { version = "0.9", default-features = false }

[build-dependencies]
cc = "1.0"
