[package]
name = "sqlite-dialect"
version = "0.1.0"
edition = "2018"
authors = ["gwenn"]
description = "SQLite dialect"
#documentation = "http://docs.rs/scan-rs"
repository = "https://github.com/gwenn/lemon-rs"
#readme = "README.md"
categories = ["parser-implementations"]
keywords = ["sqlite"]
license = "Unlicense/MIT"

[badges]
#travis-ci = { repository = "gwenn/scan-rs" }
maintenance = { status = "experimental" }

[dependencies]
phf = "0.7"
phf_macros = "0.7"
