[package]
name = "sqlite-lexer"
version = "0.1.0"
edition = "2018"
authors = ["gwenn"]
description = "SQL lexer (as understood by SQLite)"
#documentation = "http://docs.rs/scan-rs"
repository = "https://github.com/gwenn/lemon-rs"
#readme = "README.md"
categories = ["parser-implementations"]
keywords = ["scanner", "tokenizer"]
license = "Unlicense/MIT"

[badges]
#travis-ci = { repository = "gwenn/scan-rs" }
maintenance = { status = "experimental" }

[dependencies]
log = "0.4"
memchr = "2.0"
sqlite-dialect = { path = "../dialect", version = "0.1.0" }
# In Lemon, the tokenizer calls the parser.
sqlite-parser = { path = "../parser", version = "0.0.1" }
