[package]
name = "sqlite-parser"
version = "0.0.1"
edition = "2018"
authors = ["gwenn"]
description = "SQL parser (as understood by SQLite)"
#documentation = "http://docs.rs/lemon-rs"
repository = "https://github.com/gwenn/lemon-rs"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["sql", "parser", "sqlite"]
license = "Apache-2.0/MIT"
#build = "build.rs" # Lemon preprocessing

[features]
# FIXME: specific to one parser, not global
YYTRACKMAXSTACKDEPTH = []
YYNOERRORRECOVERY = []
YYSTACKDYNAMIC = []
NDEBUG = []
default = ["YYNOERRORRECOVERY"]

[dependencies]
# FIXME optional when NDEBUG
log = "0.4"
smallvec = "0.6"
sqlite-dialect = { path = "../dialect", version = "0.1.0" }

#[build-dependencies]
#gcc = "0.3"
#lemon = "0.0.1"
